force-app/main/default/objects/Purchase_Order_Lines__c/Purchase_Order_Lines__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Lines</label>
    <nameField>
        <displayFormat>POL-{0000}</displayFormat>
        <label>Purchase Order Lines #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>