force-app/main/default/objects/Purchase_Order_Lines__c/fields/Act_Cost__c.field-meta.xml
<CustomField>
    <fullName>Act_Cost__c</fullName>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>