force-app/main/default/objects/Purchase_Order_Lines__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <formula>Product__r.Parent_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product</label>
    <type>Text</type>
</CustomField>