force-app/main/default/objects/Purchase_Order_Lines__c/fields/Purchase_Orders__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Orders__c</fullName>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Orders__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>