force-app/main/default/objects/Purchase_Order_Lines__c/fields/Shipped__c.field-meta.xml
<CustomField>
    <fullName>Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipped?</label>
    <type>Checkbox</type>
</CustomField>