force-app/main/default/objects/Purchase_Order_Lines__c/fields/Shipping_Handling__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Handling__c</fullName>
    <label>Shipping/Handling</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>