force-app/main/default/objects/Purchase_Order_Lines__c/fields/Total_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Formula__c</fullName>
    <formula>Sub_Total__c - Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>